--- a/haber.html
+++ b/haber.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Güncel Haberler</title>
+    <title>mertens</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Raleway:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         * {
@@ -43,18 +43,17 @@
 
         .news-gallery {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(4, 1fr);
             gap: 20px;
             width: 80%;
             margin-top: 30px;
             position: relative;
         }
 
-        /* Haber kutuları için düzenleme */
         .news-item {
             position: relative;
             width: 100%;
-            height: 350px; /* Haber kutusunun yüksekliğini belirledik */
+            height: 220px; /* Daha küçük boyut */
             margin: 10px;
             border-radius: 10px;
             overflow: hidden;
@@ -63,42 +62,34 @@
             border: 2px solid rgba(255, 255, 255, 0.3);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
         }
 
-        /* Haber kutusunun hover efekti */
         .news-item:hover {
             transform: scale(1.05);
             box-shadow: 0 0 30px rgba(255, 255, 255, 0.8);
         }
 
-        /* Resim çerçevesi için özel düzenleme */
-        .news-item .image-container {
-            position: relative;
-            width: 100%;
-            height: 180px; /* Resim için yükseklik */
-            overflow: hidden;
-            border: 3px solid #fff; /* Beyaz çerçeve */
-            border-radius: 8px;
-            margin-bottom: 15px;
-        }
-
         .news-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Resmin tam görünmesini sağlıyoruz */
+            object-fit: cover;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
         }
 
+        .news-item:hover img {
+            transform: scale(1.1);
+        }
+
+        /* Başlık Resminin Üzerinde Görünmesi */
         .news-item .title {
             position: absolute;
-            bottom: 15px;
+            top: 5px;
             left: 50%;
             transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            font-size: 1.2rem;
+            font-size: 1.3rem; /* Küçültülmüş başlık boyutu */
             padding: 8px;
             text-align: center;
             font-weight: bold;
@@ -112,7 +103,7 @@
             transform: translateX(-50%) translateY(-8px);
         }
 
-        /* Haber içeriği */
+        /* Haber içeriği küçük ve şık olacak şekilde ayarlandı */
         .news-content {
             display: none;
             color: white;
@@ -120,7 +111,7 @@
             padding: 15px;
             margin-top: 10px;
             border-radius: 10px;
-            font-size: 0.95rem;
+            font-size: 0.95rem; /* Küçültülmüş içerik boyutu */
             line-height: 1.5;
             max-width: 80%;
             margin: 20px auto;
@@ -138,7 +129,7 @@
             100% { opacity: 1; transform: scale(1); }
         }
 
-        /* Mobil cihazlar için düzenleme */
+        /* Mobil uyumluluk */
         @media (max-width: 768px) {
             body {
                 padding: 20px;
@@ -149,14 +140,15 @@
             }
 
             .news-item {
-                height: 300px; /* Haber kutusunun yüksekliği mobilde de aynı kalacak */
+                height: 180px;
             }
 
             .news-gallery {
-                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
                 gap: 15px;
             }
         }
+
     </style>
 </head>
 <body>
@@ -165,33 +157,28 @@
     <p>En Son Gelişmeler ve Öne Çıkanlar</p>
 
     <div class="news-gallery">
-        <!-- Haber 1 -->
         <div class="news-item" onclick="showContent(1)">
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
-            </div>
+            <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
             <div class="title">Durdurlamaz!</div>
-        </div>
-
-        <!-- Haber 2 -->
-        <div class="news-item" onclick="showContent(2)">
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
-            </div>
-            <div class="title">O Bir Lider</div>
         </div>
     </div>
 
-    <!-- İçerikler -->
     <div class="news-content" id="content-1">
         <h2>Durdurulamaz</h2>
         <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
     </div>
 
-    <div class="news-content" id="content-2">
-        <h2>O Bir Lider</h2>
-        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığınıa Oynuyor</p>
+    <div class="news-item-container">
+        <div class="image-container">
+            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
+        </div>
+        <div class="news-content">
+            <h2>O Bir Lider</h2>
+            <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığınıa Oynuyor</p>
+        </div>
     </div>
+
+
 
     <script>
         function showContent(newsId) {
@@ -202,6 +189,5 @@
             document.getElementById('content-' + newsId).classList.add('active');
         }
     </script>
-
 </body>
 </html>
