--- a/haber.html
+++ b/haber.html
@@ -157,28 +157,27 @@
     <p>En Son Gelişmeler ve Öne Çıkanlar</p>
 
     <div class="news-gallery">
+        <!-- Haber 1 -->
         <div class="news-item" onclick="showContent(1)">
             <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
-            <div class="title">Durdurlamaz!</div>
+            <div class="title">Durdurulamaz!</div>
         </div>
-    </div>
+        <!-- Haber 2 -->
+        <div class="news-item" onclick="showContent(2)">
+            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
+            <div class="title">O Bir Lider</div>
+        </div>
 
+
+    <!-- Haber İçeriği -->
     <div class="news-content" id="content-1">
         <h2>Durdurulamaz</h2>
         <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
     </div>
-
-    <div class="news-item-container">
-        <div class="image-container">
-            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
-        </div>
-        <div class="news-content">
-            <h2>O Bir Lider</h2>
-            <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığınıa Oynuyor</p>
-        </div>
+    <div class="news-content" id="content-2">
+        <h2>O Bir Lider</h2>
+        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığınıa Oynuyor</p>
     </div>
-
-
 
     <script>
         function showContent(newsId) {
