--- a/haber.html
+++ b/haber.html
@@ -43,8 +43,8 @@
 
         .news-gallery {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 20px;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 30px;
             width: 80%;
             margin-top: 30px;
             position: relative;
@@ -53,9 +53,8 @@
         .news-item {
             position: relative;
             width: 100%;
-            height: 220px; /* Daha küçük boyut */
-            margin: 10px;
-            border-radius: 10px;
+            height: 300px; /* Karelerin boyutu büyütüldü */
+            border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
             background-color: rgba(255, 255, 255, 0.1);
@@ -65,42 +64,42 @@
         }
 
         .news-item:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.8);
+            transform: scale(1.1);
+            box-shadow: 0 0 40px rgba(255, 255, 255, 0.9);
         }
 
         .news-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 10px;
+            border-radius: 15px;
             transition: transform 0.3s ease;
         }
 
         .news-item:hover img {
-            transform: scale(1.1);
+            transform: scale(1.2);
         }
 
         /* Başlık Resminin Üzerinde Görünmesi */
         .news-item .title {
             position: absolute;
-            top: 5px;
+            bottom: 15px;
             left: 50%;
             transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            font-size: 1.3rem; /* Küçültülmüş başlık boyutu */
-            padding: 8px;
+            font-size: 1.4rem;
+            padding: 10px 20px;
             text-align: center;
             font-weight: bold;
             font-family: 'Poppins', sans-serif;
-            border-radius: 8px;
+            border-radius: 10px;
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
         .news-item:hover .title {
-            background-color: rgba(0, 0, 0, 0.85);
-            transform: translateX(-50%) translateY(-8px);
+            background-color: rgba(0, 0, 0, 0.9);
+            transform: translateX(-50%) translateY(-10px);
         }
 
         /* Haber içeriği küçük ve şık olacak şekilde ayarlandı */
@@ -108,44 +107,35 @@
             display: none;
             color: white;
             background-color: rgba(0, 0, 0, 0.85);
-            padding: 15px;
-            margin-top: 10px;
-            border-radius: 10px;
-            font-size: 0.95rem; /* Küçültülmüş içerik boyutu */
-            line-height: 1.5;
+            padding: 20px;
+            margin-top: 20px;
+            border-radius: 15px;
+            font-size: 1rem;
+            line-height: 1.6;
             max-width: 80%;
             margin: 20px auto;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
-            transition: opacity 0.5s ease, transform 0.3s ease;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            border: 2px solid rgba(255, 255, 255, 0.4); /* Çerçeve eklendi */
+            transform: scale(0.8); /* Animasyon başlangıç */
+            opacity: 0;
+            transition: transform 0.5s ease, opacity 0.5s ease;
         }
 
         .news-content.active {
             display: block;
-            animation: growContent 0.8s ease-out;
-        }
-
-        @keyframes growContent {
-            0% { opacity: 0; transform: scale(0.8); }
-            100% { opacity: 1; transform: scale(1); }
+            transform: scale(1); /* Büyüme efekti */
+            opacity: 1;
         }
 
         /* Mobil uyumluluk */
         @media (max-width: 768px) {
-            body {
-                padding: 20px;
-            }
-
-            h1 {
-                font-size: 2rem;
+            .news-gallery {
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                gap: 20px;
             }
 
             .news-item {
-                height: 180px;
-            }
-
-            .news-gallery {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-                gap: 15px;
+                height: 220px;
             }
         }
 
@@ -167,16 +157,16 @@
             <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
             <div class="title">O Bir Lider</div>
         </div>
-
+    </div>
 
     <!-- Haber İçeriği -->
     <div class="news-content" id="content-1">
         <h2>Durdurulamaz</h2>
-        <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
+        <p>mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor. Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor.</p>
     </div>
     <div class="news-content" id="content-2">
         <h2>O Bir Lider</h2>
-        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığınıa Oynuyor</p>
+        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor.</p>
     </div>
 
     <script>
