--- a/haber.html
+++ b/haber.html
@@ -20,9 +20,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: hidden;
             flex-direction: column;
-            padding: 20px;
             text-align: center;
         }
 
@@ -43,20 +41,16 @@
 
         .news-gallery {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr);
             gap: 30px;
             width: 80%;
-            margin-top: 30px;
-            position: relative;
         }
 
         .news-item {
             position: relative;
-            width: 100%;
-            height: 300px; /* Karelerin boyutu büyütüldü */
+            height: 280px;
             border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
             background-color: rgba(255, 255, 255, 0.1);
             border: 2px solid rgba(255, 255, 255, 0.3);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -64,7 +58,7 @@
         }
 
         .news-item:hover {
-            transform: scale(1.1);
+            transform: scale(1.05);
             box-shadow: 0 0 40px rgba(255, 255, 255, 0.9);
         }
 
@@ -80,7 +74,6 @@
             transform: scale(1.2);
         }
 
-        /* Başlık Resminin Üzerinde Görünmesi */
         .news-item .title {
             position: absolute;
             bottom: 15px;
@@ -102,11 +95,10 @@
             transform: translateX(-50%) translateY(-10px);
         }
 
-        /* Haber içeriği küçük ve şık olacak şekilde ayarlandı */
         .news-content {
             display: none;
+            background: linear-gradient(135deg, rgba(255, 0, 150, 0.8), rgba(0, 204, 255, 0.8));
             color: white;
-            background-color: rgba(0, 0, 0, 0.85);
             padding: 20px;
             margin-top: 20px;
             border-radius: 15px;
@@ -114,24 +106,49 @@
             line-height: 1.6;
             max-width: 80%;
             margin: 20px auto;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            border: 2px solid rgba(255, 255, 255, 0.4); /* Çerçeve eklendi */
-            transform: scale(0.8); /* Animasyon başlangıç */
-            opacity: 0;
-            transition: transform 0.5s ease, opacity 0.5s ease;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
+            border: 3px solid transparent;
+            background-clip: padding-box;
+            position: relative;
+            animation: slideIn 0.8s ease-out;
         }
 
-        .news-content.active {
-            display: block;
-            transform: scale(1); /* Büyüme efekti */
-            opacity: 1;
+        .news-content::before {
+            content: "";
+            position: absolute;
+            top: -3px;
+            left: -3px;
+            right: -3px;
+            bottom: -3px;
+            border-radius: 15px;
+            background: linear-gradient(135deg, rgba(255, 0, 150, 1), rgba(0, 204, 255, 1));
+            z-index: -1;
+            animation: glow 1.5s infinite alternate;
         }
 
-        /* Mobil uyumluluk */
+        @keyframes slideIn {
+            0% {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes glow {
+            0% {
+                filter: blur(5px);
+            }
+            100% {
+                filter: blur(10px);
+            }
+        }
+
         @media (max-width: 768px) {
             .news-gallery {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-                gap: 20px;
+                grid-template-columns: repeat(1, 1fr);
             }
 
             .news-item {
@@ -147,22 +164,19 @@
     <p>En Son Gelişmeler ve Öne Çıkanlar</p>
 
     <div class="news-gallery">
-        <!-- Haber 1 -->
         <div class="news-item" onclick="showContent(1)">
             <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
             <div class="title">Durdurulamaz!</div>
         </div>
-        <!-- Haber 2 -->
         <div class="news-item" onclick="showContent(2)">
             <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
             <div class="title">O Bir Lider</div>
         </div>
     </div>
 
-    <!-- Haber İçeriği -->
     <div class="news-content" id="content-1">
         <h2>Durdurulamaz</h2>
-        <p>mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor. Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor.</p>
+        <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor. Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor.</p>
     </div>
     <div class="news-content" id="content-2">
         <h2>O Bir Lider</h2>
@@ -171,11 +185,10 @@
 
     <script>
         function showContent(newsId) {
-            const content = document.querySelectorAll('.news-content');
-            content.forEach((item) => {
-                item.classList.remove('active');
-            });
-            document.getElementById('content-' + newsId).classList.add('active');
+            const contents = document.querySelectorAll('.news-content');
+            contents.forEach(content => content.style.display = 'none');
+            const selectedContent = document.getElementById('content-' + newsId);
+            selectedContent.style.display = 'block';
         }
     </script>
 </body>
