--- a/haber.html
+++ b/haber.html
@@ -48,7 +48,7 @@
 
         .news-item {
             position: relative;
-            height: 280px;
+            height: 220px;
             border-radius: 15px;
             overflow: hidden;
             background-color: rgba(255, 255, 255, 0.1);
@@ -57,21 +57,10 @@
             cursor: pointer;
         }
 
-        .news-item:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 40px rgba(255, 255, 255, 0.9);
-        }
-
         .news-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 15px;
-            transition: transform 0.3s ease;
-        }
-
-        .news-item:hover img {
-            transform: scale(1.2);
         }
 
         .news-item .title {
@@ -87,14 +76,9 @@
             font-weight: bold;
             font-family: 'Poppins', sans-serif;
             border-radius: 10px;
-            transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
-        .news-item:hover .title {
-            background-color: rgba(0, 0, 0, 0.9);
-            transform: translateX(-50%) translateY(-10px);
-        }
-
+        /* Haber İçeriği Özel Animasyon ve Çerçeve */
         .news-content {
             display: none;
             background: linear-gradient(135deg, rgba(255, 0, 150, 0.8), rgba(0, 204, 255, 0.8));
@@ -146,16 +130,6 @@
             }
         }
 
-        @media (max-width: 768px) {
-            .news-gallery {
-                grid-template-columns: repeat(1, 1fr);
-            }
-
-            .news-item {
-                height: 220px;
-            }
-        }
-
     </style>
 </head>
 <body>
@@ -174,6 +148,7 @@
         </div>
     </div>
 
+    <!-- Haber İçerikleri -->
     <div class="news-content" id="content-1">
         <h2>Durdurulamaz</h2>
         <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor. Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor.</p>
