--- a/haber.html
+++ b/haber.html
@@ -20,7 +20,9 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: hidden;
             flex-direction: column;
+            padding: 20px;
             text-align: center;
         }
 
@@ -41,28 +43,44 @@
 
         .news-gallery {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 30px;
             width: 80%;
+            margin-top: 30px;
+            position: relative;
         }
 
         .news-item {
             position: relative;
-            height: 220px;
+            width: 100%;
+            height: 300px; /* Karelerin boyutu büyütüldü */
             border-radius: 15px;
             overflow: hidden;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
             background-color: rgba(255, 255, 255, 0.1);
             border: 2px solid rgba(255, 255, 255, 0.3);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
 
+        .news-item:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 40px rgba(255, 255, 255, 0.9);
+        }
+
         .news-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            border-radius: 15px;
+            transition: transform 0.3s ease;
         }
 
+        .news-item:hover img {
+            transform: scale(1.2);
+        }
+
+        /* Başlık Resminin Üzerinde Görünmesi */
         .news-item .title {
             position: absolute;
             bottom: 15px;
@@ -76,13 +94,19 @@
             font-weight: bold;
             font-family: 'Poppins', sans-serif;
             border-radius: 10px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
-        /* Haber İçeriği Özel Animasyon ve Çerçeve */
+        .news-item:hover .title {
+            background-color: rgba(0, 0, 0, 0.9);
+            transform: translateX(-50%) translateY(-10px);
+        }
+
+        /* Haber içeriği küçük ve şık olacak şekilde ayarlandı */
         .news-content {
             display: none;
-            background: linear-gradient(135deg, rgba(255, 0, 150, 0.8), rgba(0, 204, 255, 0.8));
             color: white;
+            background-color: rgba(0, 0, 0, 0.85);
             padding: 20px;
             margin-top: 20px;
             border-radius: 15px;
@@ -90,71 +114,30 @@
             line-height: 1.6;
             max-width: 80%;
             margin: 20px auto;
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
-            border: 3px solid transparent;
-            background-clip: padding-box;
-            position: relative;
-            animation: slideIn 0.8s ease-out;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            border: 2px solid rgba(255, 255, 255, 0.4); /* Çerçeve eklendi */
+            transform: scale(0.8); /* Animasyon başlangıç */
+            opacity: 0;
+            transition: transform 0.5s ease, opacity 0.5s ease;
         }
 
-        .news-content::before {
-            content: "";
-            position: absolute;
-            top: -3px;
-            left: -3px;
-            right: -3px;
-            bottom: -3px;
-            border-radius: 15px;
-            background: linear-gradient(135deg, rgba(255, 0, 150, 1), rgba(0, 204, 255, 1));
-            z-index: -1;
-            animation: glow 1.5s infinite alternate;
+        .news-content.active {
+            display: block;
+            transform: scale(1); /* Büyüme efekti */
+            opacity: 1;
         }
-@keyframes slideInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-30px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
 
-.animated-title {
-    display: inline-block;
-    animation: slideInLeft 1s ease-out;
-    font-size: 1.8rem;
-    font-weight: bold;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-    color: #FFD700; /* Altın rengi */
-    margin-bottom: 15px;
-}
+        /* Mobil uyumluluk */
+        @media (max-width: 768px) {
+            .news-gallery {
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                gap: 20px;
+            }
 
-/* Haber İçeriği Metin Animasyonu */
-@keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.animated-text {
-    display: inline-block;
-    animation: fadeInUp 1s ease-out;
-    position: relative;
-    background: linear-gradient(135deg, rgba(255, 0, 150, 0.8), rgba(0, 204, 255, 0.8));
-    padding: 10px 15px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
-    font-size: 1rem;
-    color: white;
-    line-height: 1.6;
-    border: 2px solid rgba(255, 255, 255, 0.5); /* Çerçeve */
-}
+            .news-item {
+                height: 220px;
+            }
+        }
 
     </style>
 </head>
@@ -164,34 +147,38 @@
     <p>En Son Gelişmeler ve Öne Çıkanlar</p>
 
     <div class="news-gallery">
+        <!-- Haber 1 -->
         <div class="news-item" onclick="showContent(1)">
             <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
             <div class="title">Durdurulamaz!</div>
         </div>
+        <!-- Haber 2 -->
         <div class="news-item" onclick="showContent(2)">
             <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
             <div class="title">O Bir Lider</div>
         </div>
     </div>
 
-    <!-- Haber İçerikleri -->
-<div class="news-content" id="content-1">
-    <h2 class="animated-title">Durdurulamaz</h2>
-    <p class="animated-text">A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor. Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor.</p>
-</div>
-<div class="news-content" id="content-2">
-    <h2 class="animated-title">O Bir Lider</h2>
-    <p class="animated-text">Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor.</p>
-</div>
-
+    <!-- Haber İçeriği -->
+    <div class="news-content" id="content-1">
+        <h2>Durdurulamaz</h2>
+        <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor. Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor.</p>
+    </div>
+    <div class="news-content" id="content-2">
+        <h2>O Bir Lider</h2>
+        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor.</p>
+    </div>
 
     <script>
         function showContent(newsId) {
-            const contents = document.querySelectorAll('.news-content');
-            contents.forEach(content => content.style.display = 'none');
-            const selectedContent = document.getElementById('content-' + newsId);
-            selectedContent.style.display = 'block';
+            const content = document.querySelectorAll('.news-content');
+            content.forEach((item) => {
+                item.classList.remove('active');
+            });
+            document.getElementById('content-' + newsId).classList.add('active');
         }
     </script>
 </body>
 </html>
+
+bunda sadece         <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor.</p>
