--- a/haber.html
+++ b/haber.html
@@ -1,27 +1,5 @@
-<div class="news-gallery">
-    <!-- Var olan haber -->
-    <div class="news-item" onclick="showContent(1)">
-        <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
-        <div class="title">Durdurlamaz!</div>
-    </div>
 
-    <!-- Yeni Haber -->
-    <div class="news-item" onclick="showContent(2)">
-        <img src="https://i.hizliresim.com/b3ktk7g.jpg" alt="Haber 2">
-        <div class="title">Yeni Futbol Transferi</div>
-    </div>
-    
-    <!-- Yeni Haber 2 -->
-    <div class="news-item" onclick="showContent(3)">
-        <img src="https://i.hizliresim.com/c2kzk4g.jpg" alt="Haber 3">
-        <div class="title">Basketbol Şampiyonu!</div>
-    </div>
-</div>
-
-<!-- İçerik kısmı -->
-<div class="news-content" id="content-1">
-    <h2>Durdurulamaz</h2>
-    <p>A Tierden B Tiere Düşen mehmet12ws D<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
@@ -175,8 +153,11 @@
             <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
             <div class="title">Durdurulamaz!</div>
         </div>
-
-
+        <!-- Haber 2 -->
+        <div class="news-item" onclick="showContent(2)">
+            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
+            <div class="title">O Bir Lider</div>
+        </div>
     </div>
 
     <!-- Haber İçeriği -->
@@ -184,7 +165,10 @@
         <h2>Durdurulamaz</h2>
         <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor. Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor.</p>
     </div>
- 
+    <div class="news-content" id="content-2">
+        <h2>O Bir Lider</h2>
+        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor.</p>
+    </div>
 
     <script>
         function showContent(newsId) {
@@ -198,17 +182,4 @@
 </body>
 </html>
 
-
-
-bundan hic bir özellik değiştirmedeniğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
-</div>
-
-<div class="news-content" id="content-2">
-    <h2>Yeni Futbol Transferi</h2>
-    <p>Yeni futbol transferi takıma büyük katkı sağlayacak. Futbol dünyasında ses getiren bu transferle ilgili detaylar...</p>
-</div>
-
-<div class="news-content" id="content-3">
-    <h2>Basketbol Şampiyonu!</h2>
-    <p>Basketbol takımı, sezonu şampiyon olarak tamamladı. Finaldeki büyük zaferi ve oyuncu performanslarını tüm spor severler konuşuyor...</p>
-</div>
+bunda sadece         <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor.</p>
