--- a/test.html
+++ b/test.html
@@ -17,12 +17,11 @@
             background-color: #0a0a0a;
             color: white;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             min-height: 100vh;
             text-align: center;
             padding: 20px;
-            flex-direction: column; /* Dikey yerleşim */
         }
 
         h1 {
@@ -30,40 +29,34 @@
             font-size: 3rem;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
-            animation: fadeInText 2s ease-out;
-        }
-
-        @keyframes fadeInText {
-            0% { opacity: 0; transform: translateY(-50px); }
-            100% { opacity: 1; transform: translateY(0); }
+            margin-bottom: 10px;
         }
 
         p {
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             color: rgba(255, 255, 255, 0.8);
-            margin-top: 10px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
+            margin-bottom: 20px;
         }
 
         .gallery {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 15px;
-            margin-top: 30px;
             width: 100%;
             max-width: 1200px;
+            margin-bottom: 30px;
         }
 
         .image-container {
             position: relative;
             width: 100%;
-            height: 0;
             padding-bottom: 100%; /* Kare oranı */
             border-radius: 10px;
             overflow: hidden;
+            background-color: rgba(255, 255, 255, 0.1);
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .image-container:hover {
@@ -78,11 +71,6 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-
-        .image-container:hover img {
-            transform: scale(1.1);
         }
 
         .fullscreen {
@@ -121,17 +109,12 @@
             border-radius: 50%;
             cursor: pointer;
             padding: 5px 10px;
-            z-index: 2000;
-        }
-
-        .close-btn:hover {
-            background: rgba(255, 255, 255, 0.2);
         }
 
         .video-container {
             width: 100%;
             max-width: 700px;
-            margin-top: 30px;
+            margin-top: 20px;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
@@ -158,10 +141,6 @@
                 gap: 10px;
             }
 
-            .image-container {
-                padding-bottom: 120%;
-            }
-
             .video-container {
                 width: 90%;
             }
@@ -173,6 +152,7 @@
     <h1>Hayat Olmasada</h1>
     <p>Seninle Güzel</p>
 
+    <!-- Galeri -->
     <div class="gallery">
         <div class="image-container">
             <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
@@ -188,6 +168,7 @@
         </div>
     </div>
 
+    <!-- Video -->
     <div class="video-container">
         <video controls>
             <source src="https://cdn.discordapp.com/attachments/1196885529845829674/1316820602002079805/inter_tecavuz.mp4" type="video/mp4">
@@ -195,6 +176,7 @@
         </video>
     </div>
 
+    <!-- Tam ekran görüntüleme -->
     <div class="fullscreen" id="fullscreen-container">
         <button class="close-btn" onclick="closeFullscreen()">×</button>
         <img id="fullscreen-image" src="" alt="Fullscreen Image">
