--- a/test.html
+++ b/test.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halloween Madness</title>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+    <title>Halloween Fest!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Spooky&family=Limbo&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,11 +13,10 @@
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(45deg, #0a0a0a, #3d0b3d);
+            font-family: 'Spooky', sans-serif;
+            background: radial-gradient(circle, #0a0a0a, #3d0b3d, #000);
             color: white;
             overflow: hidden;
-            position: relative;
             height: 100vh;
             display: flex;
             flex-direction: column;
@@ -25,17 +24,19 @@
             justify-content: center;
             text-align: center;
             animation: background-glow 6s infinite alternate;
+            position: relative;
         }
 
+        /* Arkaplan ışık animasyonu */
         @keyframes background-glow {
-            0% { background: linear-gradient(45deg, #0a0a0a, #3d0b3d); }
-            50% { background: linear-gradient(45deg, #1c0c1c, #5e1f5e); }
-            100% { background: linear-gradient(45deg, #0a0a0a, #3d0b3d); }
+            0% { background: radial-gradient(circle, #0a0a0a, #3d0b3d); }
+            50% { background: radial-gradient(circle, #1c0c1c, #700d70); }
+            100% { background: radial-gradient(circle, #0a0a0a, #3d0b3d); }
         }
 
         h1 {
             font-family: 'Creepster', cursive;
-            font-size: 4rem;
+            font-size: 4.5rem;
             color: #ff7300;
             text-shadow: 0 0 30px rgba(255, 115, 0, 0.8), 0 0 60px rgba(255, 115, 0, 0.4);
             margin-bottom: 10px;
@@ -49,10 +50,12 @@
         }
 
         p {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
+            font-family: 'Dancing Script', cursive;
             color: rgba(255, 255, 255, 0.8);
             margin-bottom: 30px;
             animation: fade-in 2s ease-in-out forwards;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
         }
 
         @keyframes fade-in {
@@ -60,40 +63,66 @@
             100% { opacity: 1; transform: translateY(0); }
         }
 
+        /* Emoji Animasyonları */
+        .emoji {
+            position: absolute;
+            font-size: 3rem;
+            animation: float-emoji 5s ease-in-out infinite;
+            opacity: 0.7;
+        }
+
+        @keyframes float-emoji {
+            0% { transform: translateY(0px) rotate(0deg); opacity: 1; }
+            50% { transform: translateY(-50px) rotate(20deg); opacity: 0.8; }
+            100% { transform: translateY(0px) rotate(0deg); opacity: 1; }
+        }
+
+        .emoji:nth-child(1) {
+            top: 10%; left: 20%;
+            animation-delay: 0s;
+        }
+
+        .emoji:nth-child(2) {
+            top: 30%; left: 70%;
+            animation-delay: 2s;
+        }
+
+        .emoji:nth-child(3) {
+            top: 60%; left: 40%;
+            animation-delay: 4s;
+        }
+
+        .emoji:nth-child(4) {
+            top: 50%; left: 10%;
+            animation-delay: 1s;
+        }
+
+        /* Galeri */
         .gallery {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 40px;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 40px;
             position: relative;
-            width: 100%;
-            max-width: 1000px;
-            transform: rotate(-2deg);
+            max-width: 1200px;
         }
 
         .image-container {
             position: relative;
-            width: 250px;
-            height: 250px;
-            overflow: hidden;
+            width: 200px;
+            height: 200px;
             border: 5px solid #ff7300;
             border-radius: 20px;
             box-shadow: 0 0 20px rgba(255, 115, 0, 0.7);
-            background-color: rgba(0, 0, 0, 0.7);
+            overflow: hidden;
             transform: rotate(calc(var(--angle, 0deg)));
-            animation: float 4s ease-in-out infinite alternate;
+            animation: shake 6s ease-in-out infinite alternate;
         }
 
-        .image-container:nth-child(odd) {
-            --angle: 5deg;
-        }
-
-        .image-container:nth-child(even) {
-            --angle: -5deg;
-        }
-
-        @keyframes float {
+        @keyframes shake {
             0% { transform: rotate(calc(var(--angle, 0deg))) translateY(0px); }
-            100% { transform: rotate(calc(var(--angle, 0deg))) translateY(-15px); }
+            50% { transform: rotate(calc(var(--angle, 0deg))) translateY(-15px); }
+            100% { transform: rotate(calc(var(--angle, 0deg))) translateY(0px); }
         }
 
         .image-container img {
@@ -148,47 +177,18 @@
         .close-btn:hover {
             background: rgba(255, 0, 0, 1);
         }
-
-        /* Hareketli Duman */
-        .smoke {
-            position: absolute;
-            width: 300px;
-            height: 300px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            filter: blur(40px);
-            animation: move-smoke 6s infinite ease-in-out;
-        }
-
-        .smoke:nth-child(1) {
-            top: 10%;
-            left: 30%;
-            animation-delay: 0s;
-        }
-
-        .smoke:nth-child(2) {
-            top: 50%;
-            left: 60%;
-            animation-delay: 2s;
-        }
-
-        .smoke:nth-child(3) {
-            top: 80%;
-            left: 20%;
-            animation-delay: 4s;
-        }
-
-        @keyframes move-smoke {
-            0% { transform: translateY(0) translateX(0); opacity: 0.3; }
-            50% { transform: translateY(-20px) translateX(30px); opacity: 0.5; }
-            100% { transform: translateY(0) translateX(0); opacity: 0.3; }
-        }
     </style>
 </head>
 <body>
 
-    <h1>Korkunç Halloween!</h1>
-    <p>Cadılar Bayramı'nın karanlık ruhuna hazır olun...</p>
+    <h1>🎃 Halloween Madness! 👻</h1>
+    <p>Karanlık, korku ve eğlence bir arada! Gelin ve katılın...</p>
+
+    <!-- Emoji Animasyonları -->
+    <div class="emoji">🎃</div>
+    <div class="emoji">👻</div>
+    <div class="emoji">🕸️</div>
+    <div class="emoji">🕷️</div>
 
     <!-- Galeri -->
     <div class="gallery">
@@ -201,15 +201,7 @@
         <div class="image-container">
             <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3" onclick="openFullscreen(this)">
         </div>
-        <div class="image-container">
-            <img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4" onclick="openFullscreen(this)">
-        </div>
     </div>
-
-    <!-- Duman Efektleri -->
-    <div class="smoke"></div>
-    <div class="smoke"></div>
-    <div class="smoke"></div>
 
     <!-- Tam ekran -->
     <div class="fullscreen" id="fullscreen-container">
